# moving_window

./: CMakeLists.txt  README.md
documentation/: build_html.bat  build_html.cmd
documentation/html/: HTML.manifest  index.html
documentation/html/index/: s02.html  s03.html  s04.html  s05.html  s06.html
documentation/source/: concept_raster.xml  concept_window.xml  motivating_example.xml  moving_window.xml  type_gdal_raster.xml  type_zip_range.xml
examples/: motivating_example.cpp
include/blink/moving_window/: circular_window_edge_iterator.h  circular_window_iterator.h  default_construction_functor.h  indicator_input_raster.h  moving_window_patch_view_helper.h  moving_window_view.h  non_square_window_edge_iterator.h  non_square_window_iterator.h  patch_detect.h  square_window_edge_iterator.h  square_window_iterator.h  traits.h  window.h
include/moving_window/: coordinate_2d.h  default_construction_functor.h  dereference_proxy.h  edge_iterator.h  exceptions.h  gdal_raster.h  gdal_raster_iterator.h  gdal_raster_lru.h  indicator_input_raster.h  kernel_landscape_metric.h  moving_window_function.h  moving_window_patch_view_helper.h  moving_window_view.h  neighbourhood.h  non_square_window_edge_iterator.h  non_square_window_iterator.h  patch_detect.h  raster_iterator.h  raster_traits.h  square_window_edge_iterator.h  square_window_iterator.h  traits.h  utility.h  weighted_square_window_iterator.h  window.h  zip_range.h
include/moving_window/indicator/: area_weighted_patch_size.h  edge_density.h  edge_list.h  interspersion.h  mean.h  most_common_class.h  (+2 more)
(+18 files in other folders)
